--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 
 <body>
-    <script src="./script.js"></script>
+
+<h1>Code Quiz</h1>
+<p>10 Questions about coding!</p>
+<button id="start">Start</button>
+<div>Time Left: <span id= "time">60</span></div>
+<p id="question"></p>
+ 
+<div class="buttons">
+    <button id="btn1"><span id="choice1"></span></button>
+    <button id="btn2"><span id="choice2"></span></button>
+    <button id="btn3"><span id="choice3"></span></button>
+    <button id="btn4"><span id="choice4"></span></button>
+</div>
+
+<script src="./script.js"></script>
 </body>
 </html>
