Questions array, score, true and false buttons working

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
 <p id="question"></p>
  
 <div class="buttons">
-    <button id="btn1"><span id="choice1"></span></button>
-    <button id="btn2"><span id="choice2"></span></button>
-    <button id="btn3"><span id="choice3"></span></button>
-    <button id="btn4"><span id="choice4"></span></button>
+    <button id="trueBtn">True</button>
+    <button id="falseBtn">False</button>
+</div>
+
+<div>
+    <h2>Highscores</h2>
 </div>
 
 <script src="./script.js"></script>
