--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
 <button id="start">Start</button>
 <div>Time Left: <span id= "time">60</span></div>
 <p id="question"></p>
+<div id="highscore"></div>
  
 <div class="buttons">
     <button id="trueBtn">True</button>
     <button id="falseBtn">False</button>
 </div>
 
-<div>
-    <h2>Highscores</h2>
+<div id="initials">
+    <p>Put your in your initials for your highscore</p>
+    <form id = "formInitials">
+        <input type ="text" id=initialInput> 
+    </form>
 </div>
+
+<h2>Highscores</h2>
+<ul id="highscoreNames"></ul>
+<ul id="highscoreScores"></ul>
 
 <script src="./script.js"></script>
 </body>
