added clearscore, cleartime, playagain, and local storage info

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
 
 <div id="initials">
     <p>Put your in your initials for your highscore</p>
-    <form id = "formInitials">
-        <input type ="text" id=initialInput> 
-    </form>
+    <input type ="text" id="initialInput"><button id= "addHighscore">Submit</button><button id="playAgain">Play Again</button>
 </div>
 
-<h2>Highscores</h2>
-<ul id="highscoreNames"></ul>
-<ul id="highscoreScores"></ul>
+<div>
+    <h2>Highscores</h2>
+    <ol id="highscoreList">
+
+    </ol>
+</div>
 
 <script src="./script.js"></script>
 </body>
