--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 <body>
 
-<h1>Code Quiz</h1>
-<p>10 Questions about coding!</p>
+<div class="content">
+    <h1>Dog Quiz</h1>
+<p>10 Questions about dogs! You have 60 seconds, you get 10 points per right answer, and -5 seconds per wrong answer.</p>
 <button id="start">Start</button>
 <div>Time Left: <span id= "time">60</span></div>
 <p id="question"></p>
@@ -33,7 +34,7 @@
 
     </ol>
 </div>
-
+</div>
 <script src="./script.js"></script>
 </body>
 </html>
